manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tech-quiz
  labels:
    app: tech-quiz
    environment: development
